# research-environments

./: .gitignore  AGENTS.md  BENCHMARK_PORTING.md  README.md  pyproject.toml
.cursor/: BUGBOT.md
.github/workflows/: publish-envs.yaml  tests.yaml
configs/: endpoints.py  pinchbench.eval.toml
environments/aime2024/: README.md  aime2024.py  pyproject.toml
environments/aime2025/: README.md  aime2025.py  pyproject.toml
environments/aime2026/: README.md  aime2026.py  pyproject.toml
environments/aime2026/.prime/: .env-metadata.json
environments/bfcl_v3/: README.md  bfcl_v3.py  pyproject.toml
environments/bfcl_v3/.prime/: .env-metadata.json
environments/browsecomp/: README.md  browsecomp.py  pyproject.toml
environments/browsecomp/.prime/: .env-metadata.json
environments/clbench/: README.md  clbench.py  pyproject.toml
environments/clbench_rlm/: README.md  clbench_rlm.py  pyproject.toml
environments/clbench_rlm/.prime/: .env-metadata.json
environments/code_env/: README.md  pyproject.toml
environments/code_env/.prime/: .env-metadata.json
environments/code_env/code_env/: code_env.py
environments/code_env/code_env/utils/: deepcoder_utils.py
environments/color_codeword/: README.md  color_codeword.py
environments/ddbc/: README.md
environments/ddbc_rlm/: README.md  pyproject.toml
environments/deepdive/: README.md  pyproject.toml
environments/deepdive/.prime/: .env-metadata.json
environments/deepdive/deepdive/: deepdive.py  open_one.py
environments/deepdive_rlm/: README.md  pyproject.toml
environments/deepdive_rlm/.prime/: .env-metadata.json
environments/deepdive_rlm/deepdive_rlm/: __init__.py  config.py  deepdive_rlm.py  formatting.py  open_one.py  rate_limit.py  web_tools.py
environments/gpqa/: README.md  pyproject.toml
environments/gpqa/.prime/: .env-metadata.json
environments/graphwalks/: README.md  graphwalks.py  pyproject.toml
environments/graphwalks/.prime/: .env-metadata.json
environments/graphwalks_rlm/: README.md  graphwalks_rlm.py  pyproject.toml
environments/graphwalks_rlm/.prime/: .env-metadata.json
environments/hle/: README.md  pyproject.toml
environments/hle/.prime/: .env-metadata.json
environments/hle/hle/: hle.py
environments/if_summarize_judge/: README.md  if_summarize_judge.py  pyproject.toml
environments/if_summarize_judge/.prime/: .env-metadata.json
environments/ifbench/: README.md  pyproject.toml
environments/ifbench/.prime/: .env-metadata.json
environments/ifbench/ifbench/: ifbench.py
environments/ifeval/: README.md
environments/lean_code/: README.md  pyproject.toml
environments/lean_code/lean_code/: __init__.py  lean_code.py
environments/lean_code/tools/: execute_bash.py  str_replace.py
environments/livecodebench/: README.md  pyproject.toml
environments/livecodebench/.prime/: .env-metadata.json
environments/livecodebench/livecodebench/: livecodebench.py
environments/logic_env/: README.md
environments/longbenchpro_rlm/: pyproject.toml
environments/longbenchpro_rlm/.prime/: .env-metadata.json
environments/longcot_rlm/: README.md  longcot_rlm.py  pyproject.toml
environments/math500/: README.md  pyproject.toml
environments/math_env/: README.md  math_env.py  pyproject.toml
environments/math_env/.prime/: .env-metadata.json
environments/math_env_rlm/: README.md  math_env_rlm.py  pyproject.toml
environments/math_env_rlm/.prime/: .env-metadata.json
environments/mcp_atlas/: README.md  mcp_atlas.py  pyproject.toml
environments/mcp_atlas/.prime/: .env-metadata.json
environments/mini_swe_agent_plus/: README.md  pyproject.toml
environments/mini_swe_agent_plus/.prime/: .env-metadata.json
environments/mini_swe_agent_plus/mini_swe_agent_plus/: mini_swe_agent_plus.py
environments/mini_swe_agent_plus_rlm/: README.md  pyproject.toml
environments/mini_swe_agent_plus_rlm/.prime/: .env-metadata.json
environments/mini_swe_agent_plus_rlm/mini_swe_agent_plus_rlm/: __init__.py  mini_swe_agent_plus_rlm.py
environments/mini_swe_agent_plus_rlm/mini_swe_agent_plus_rlm/utils/: execution_log_parser.py  prompts.py  swebench_utils.py
environments/mini_swe_agent_plus_rlm/tools/: str_replace.py
environments/mmlu_pro/: README.md  pyproject.toml
environments/mmlu_pro/.prime/: .env-metadata.json
environments/mrcr_v2_rlm/: README.md  pyproject.toml
environments/mrcr_v2_rlm/.prime/: .env-metadata.json
environments/needle_in_haystack_rlm/: README.md  needle_in_haystack_rlm.py  pyproject.toml
environments/needle_in_haystack_rlm/.prime/: .env-metadata.json
environments/oolong_rlm/: README.md  oolong_rlm.py  pyproject.toml
environments/oolong_rlm/.prime/: .env-metadata.json
environments/opencode_cp/: Dockerfile  README.md  pyproject.toml
environments/opencode_cp/.prime/: .env-metadata.json
environments/opencode_cp/opencode_cp/: __init__.py  data_utils.py  opencode_cp.py  test_utils.py
environments/opencode_deepdive/: Dockerfile  README.md  eval.sh  pyproject.toml
environments/opencode_deepdive/.prime/: .env-metadata.json
environments/opencode_deepdive/opencode_deepdive/: opencode_deepdive.py
environments/opencode_lean/: README.md  pyproject.toml
environments/opencode_lean/.prime/: .env-metadata.json
environments/opencode_lean/opencode_lean/: __init__.py  opencode_lean.py
environments/opencode_math/: Dockerfile  README.md  opencode_math.py  pyproject.toml
environments/opencode_science/: Dockerfile  README.md  opencode_science.py  pyproject.toml
environments/opencode_swe/: README.md  pyproject.toml
environments/patterned_needle_in_haystack/: ABLATIONS.md  README.md  aggregate_results.py  plot_results.py  pyproject.toml  run_ablations.py
environments/patterned_needle_in_haystack_rlm/: README.md  SINGLE_LINE_MODE_PLAN.md  aggregate_results.py  plot_results.py  pyproject.toml  run_ablations.py
environments/pinchbench/: README.md  pyproject.toml
environments/rlm_browsecomp/: README.md  pyproject.toml
environments/rlm_deepdive/: README.md  pyproject.toml
environments/rlm_secrets/: README.md  pyproject.toml  rlm_secrets.py
tests/: test_envs.py
(+175 files in other folders)
