[project]
name = "research-environments"
version = "0.1.0"
description = "Base utilities for research environments"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "verifiers>=0.1.11.dev1",
    "prime-sandboxes>=0.2.15",
    "prime-tunnel>=0.1.4",
    "datasets>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_environments"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["F", "I"]
ignore = ["F722", "F821"] # Need to ignore for jaxtyping (https://docs.kidger.site/jaxtyping/faq/)

[tool.ruff]
line-length = 120
