[project]
name = "aime2026"
description = "AIME-26 evaluation environment"
tags = ["math", "eval", "single-turn"]
version = "0.1.11"
requires-python = ">=3.11,<3.13"
dependencies = [
    "verifiers>=0.1.12.dev1",
    "math-verify>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["aime2026.py"]
