[project]
name = "bfcl-v3"
description = "BFCL v3 evaluation environment"
tags = ["tool-use", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.9.post3",
    "bfcl-eval==2026.1.17"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
# can remove pin after these are released
# - https://github.com/PrimeIntellect-ai/verifiers/pull/728
# - https://github.com/PrimeIntellect-ai/verifiers/pull/729
# - https://github.com/PrimeIntellect-ai/verifiers/pull/730
verifiers = { git = "https://github.com/PrimeIntellect-ai/verifiers.git", rev = "14de20c" }

[tool.verifiers.eval]
num_examples = -1
rollouts_per_example = 1