[project]
name = "bfcl-v3"
description = "BFCL v3 evaluation environment"
tags = ["tool-use", "eval"]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.10.dev0",
    "bfcl-eval==2026.1.17"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.verifiers.eval]
num_examples = -1
rollouts_per_example = 1