[project]
name = "bfcl-v3"
description = "BFCL v3 evaluation environment"
tags = ["tool-use", "eval"]
version = "0.1.3"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.11.dev0",
    "bfcl-eval @ git+https://github.com/mikasenghaas/gorilla.git@ae55a39#subdirectory=berkeley-function-call-leaderboard"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.verifiers.eval]
num_examples = -1
rollouts_per_example = 1