[project]
name = "browsecomp"
description = "BrowseComp evaluation environment"
tags = ["web-search", "tool-use", "llm-as-judge"]
version = "0.1.5"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.9.post3",
    "cachetools",
    "exa_py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.verifiers.eval]
num_examples = -1
rollouts_per_example = 1