[project]
name = "clbench-rlm"
description = "CL-bench environment using RLM with strict rubric-based LLM judge scoring"
tags = ["rlm", "benchmark", "long-context", "multi-turn", "verifier"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.11.dev1",
]

[tool.uv.sources]
verifiers = { git = "https://github.com/PrimeIntellect-ai/verifiers.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
