[project]
name = "code-env"
description = "Single-turn code training environment"
version = "0.3.0"
requires-python = ">=3.12"
tags = ["single-turn", "coding", "sandbox"]
dependencies = [
    "prime-sandboxes>=0.2.19",
    "verifiers>=0.1.12.dev6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
