[project]
name = "deepdive-rlm"
version = "0.1.0"
description = "DeepDive QA RL environment with a Serper-powered search tool using RLM"
tags = ["rl", "rlm", "search", "qa"]
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.0",
    "datasets>=4.0.0",
    "diskcache>=5.6.0",
    "filelock>=3.0.0",
    "pdfminer-six>=20251107",
    "trafilatura>=2.0.0",
    "verifiers>=0.1.8.post2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
verifiers = { git = "https://github.com/PrimeIntellect-ai/verifiers.git", rev = "main" }

[tool.hatch.metadata]
allow-direct-references = true
