[project]
name = "deepdive-rlm"
version = "0.2.6"
description = "DeepDive QA RL environment with a Serper-powered search tool using RLM"
tags = ["rl", "rlm", "search", "qa"]
dependencies = [
    "aiohttp>=3.10.0",
    "datasets>=4.0.0",
    "diskcache>=5.6.0",
    "pdfminer-six>=20251107",
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
