[project]
name = "gpqa"
description = "GPQA evaluation environment"
tags = ["single-turn", "llm-judge", "multiple-choice", "eval"]
version = "0.1.5"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.12.dev1",
    "math-verify>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
