[project]
name = "graphwalks"
description = "GraphWalks graph traversal evaluation environment (single-turn)"
tags = ["single-turn", "long-context", "graph"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
