[project]
name = "if-summarize-judge"
version = "0.1.1"
description = "Evaluate instruction-following on Wikipedia article summarization with held-out constraint types."
tags = ["summarization", "instruction-following", "llm-as-judge", "single-turn"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.10",
    "datasets>=3.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["if_summarize_judge.py"]
