[project]
name = "ifbench"
description = "IFBench evaluation environment"
tags = ["ifbench", "single-turn", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.10",
    "langdetect",
    "nltk",
    "immutabledict",
    "spacy",
    "emoji",
    "syllapy",
    "setuptools<78",
    "pip",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"