[project]
name = "lean-code"
description = "Agentic Lean 4 environment with bash + str_replace tools for theorem proving"
tags = ["lean4", "theorem-proving", "multi-turn", "agentic", "sandbox"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.11.dev0",
    "prime-sandboxes>=0.2.13",
    "tenacity",
    "jinja2",
    "datasets>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["lean_code", "tools"]

[tool.verifiers.eval]
num_examples = -1
rollouts_per_example = 1
