[project]
name = "livecodebench"
description = "LiveCodeBench evaluation environment"
tags = ["single-turn", "code", "eval"]
version = "0.2.5"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.12.dev6",
    "prime-sandboxes>=0.2.19"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
