[project]
name = "longcot-rlm"
description = "LongCoT long-horizon reasoning evaluation environment using RLM with Python REPL"
tags = ["multi-turn", "rlm", "sandbox", "reasoning", "python", "repl", "math", "logic", "chemistry", "chess", "cs"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.11",
    "longcot @ git+https://github.com/LongHorizonReasoning/longcot.git@6a569ab",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
