[project]
name = "math-env"
description = "Single-turn math training environment"
tags = ["math", "single-turn"]
version = "0.1.2"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.8.post2",
    "math-verify>=0.8.0",
    "prime-sandboxes>=0.2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
