[project]
name = "math-env"
description = "Single-turn math training environment"
tags = ["math", "single-turn"]
version = "0.1.3"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.12.dev1",
    "math-verify>=0.8.0",
    "prime-sandboxes>=0.2.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
