[project]
name = "mcp-atlas"
description = "MCP-Atlas tool-use evaluation environment"
tags = ["tool-use", "mcp", "llm-as-judge", "multi-turn"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.11.dev0,<0.2",
    "datasets>=4.0.0,<5",
    "prime-sandboxes>=0.2.19,<0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["mcp_atlas.py"]
