[project]
name = "mrcr-v2-rlm"
description = "MRCR v2 long-context evaluation environment using RLM with Python REPL"
tags = ["multi-turn", "rlm", "sandbox", "long-context", "python", "repl"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "download.sh" = "download.sh" }

[tool.hatch.build.targets.sdist]
include = ["mrcr_v2_rlm.py", "download.sh", "pyproject.toml", "README.md"]

[tool.hatch.metadata]
allow-direct-references = true
