[project]
name = "needle-in-haystack-rlm"
description = "Needle-in-haystack environment using RLM with Python REPL"
tags = ["multi-turn", "rlm", "sandbox", "search", "python", "repl"]
version = "0.1.5"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
