[project]
name = "oolong-rlm"
description = "Oolong long-context evaluation environment using RLM with Python REPL"
tags = ["multi-turn", "rlm", "sandbox", "long-context", "python", "repl"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.8.post2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
verifiers = { git = "https://github.com/PrimeIntellect-ai/verifiers.git", rev = "main" }
