[project]
name = "oolong-rlm"
description = "Oolong long-context evaluation environment using RLM with Python REPL"
tags = ["multi-turn", "rlm", "sandbox", "long-context", "python", "repl"]
version = "0.1.7"
requires-python = ">=3.11"
dependencies = [
    "python-dateutil>=2.9",
    "verifiers>=0.1.8.post2",
]

[tool.uv.sources]
verifiers = { git = "https://github.com/PrimeIntellect-ai/verifiers.git", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
