[project]
name = "opencode-cp"
description = "Solve competitive programming problems using OpenCode agent via ComposableEnv."
tags = ["coding", "opencode", "multi-turn"]
version = "0.3.1"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.12",
    "prime-sandboxes>=0.2.19",
]

[tool.uv.sources]
prime-sandboxes = { git = "https://github.com/primeintellect-ai/prime.git", subdirectory = "packages/prime-sandboxes", rev = "a2d7fbb" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opencode_cp"]
