[project]
name = "opencode-cp"
description = "Solve competitive programming problems using OpenCode agent via ComposableEnv."
tags = ["coding", "opencode", "multi-turn"]
version = "0.3.2"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.13.dev1",
    "prime-sandboxes>=0.2.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opencode_cp"]
