[project]
name = "opencode-deepdive"
description = "OpenCode DeepDive QA environment with web research tools"
tags = ["rl", "search", "qa", "multi-turn", "sandbox"]
version = "0.1.3"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.12.dev3",
    "prime-sandboxes>=0.2.13",
    "datasets>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["opencode_deepdive"]
artifacts = []

[tool.vf-eval]
num_examples = 5
num_rollouts = 3
