[project]
name = "opencode-deepdive"
description = "OpenCode DeepDive QA environment with web research tools"
tags = ["rl", "search", "qa", "multi-turn", "sandbox"]
version = "0.1.5"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.13.dev1",
    "prime-sandboxes>=0.2.19",
    "datasets>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["opencode_deepdive"]
artifacts = []

[tool.vf-eval]
num_examples = 5
num_rollouts = 3
