[project]
name = "opencode-lean"
description = "OpenCode Lean 4 theorem proving via ComposableEnv."
tags = ["lean", "theorem-proving", "opencode", "multi-turn", "sandbox"]
version = "0.3.2"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.13.dev1",
    "prime-sandboxes>=0.2.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opencode_lean"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 1
